@@ -1,3 +1,7 @@
+2011-06-16  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/integration/xfce.jl: added hibernate and suspend
+	entries to xfce-integration module
+
 2011-05-21  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* debian/changelog
 	* debian/rules
